--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.13
   shared_preferences_web: ^2.0.4
-  walletconnect_dart: ^0.0.5
+  #walletconnect_dart: ^0.0.5
   #google_fonts: ^3.0.1
   
 
