--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.13
   shared_preferences_web: ^2.0.4
+  http: ^0.13.4
   #walletconnect_dart: ^0.0.5
   #google_fonts: ^4.0.1
   
