--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.0.13
   shared_preferences_web: ^2.0.4
   http: ^0.13.4
+  flutter_spinkit: ^5.2.1
   #walletconnect_dart: ^0.0.5
   #google_fonts: ^4.0.1
   
