--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences_web: ^2.0.4
   http: ^0.13.4
   flutter_spinkit: ^5.2.1
+  firebase_core: ^2.8.0
   #walletconnect_dart: ^0.0.5
   #google_fonts: ^4.0.1
   
