--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^0.13.4
   flutter_spinkit: ^5.2.1
   firebase_core: ^2.8.0
+  firebase_auth: ^4.0.0
+  cloud_firestore: ^4.0.0
   #walletconnect_dart: ^0.0.5
   #google_fonts: ^4.0.1
   
