--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.0.0
   cloud_firestore: ^4.0.0
+  smooth_page_indicator: ^1.1.0
+
   #walletconnect_dart: ^0.0.5
   #google_fonts: ^4.0.1
   
