--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^4.0.0
   cloud_firestore: ^4.0.0
   smooth_page_indicator: ^1.1.0
+  intl: ^0.17.0
 
   #walletconnect_dart: ^0.0.5
   #google_fonts: ^4.0.1
